# gimp

./: meson.build
app/: meson.build  unique.c
app/core/: meson.build
app/gui/: gui-unique.c  meson.build
libgimp/: meson.build
libgimpwidgets/: gimppickbutton-quartz.c  meson.build
